# data-downloader

./: .gitignore  CHANGELOG.md  LICENSE  LLM_PRIMER.md  README.md  data_downloader.py  example-download-input-data.py  example-environment-consumer.yml  example-environment-dev.yml  pyproject.toml
.github/: copilot-instructions.md
examples/: example-download-input-data.py
examples/data/: BOM_tide-gauges.csv  origin.txt
src/data_downloader/: __init__.py
tests/: conftest.py  test_downloader.py
tests/assets/: generate_test_zips.py  text.txt
